# os_experiments

./: .env  .env.linux  Cargo.toml  Makefile  Makefile.toml  README.md  build.rs  build.sh  kernel8.ld  print_asm.sh  run.sh  run_gdb.sh  wrapper.ps1
.cargo/: config.toml
src/: boot.s  framebuffer.rs  gdt.rs  interrupts.rs  main.rs  mmu.rs  serial.rs  test_runner.rs  time.rs  uart.rs  uart.rs.orig  units.rs  vc_mailbox.rs  vga_text.rs
src/exceptions/: mod.rs  setup_handler.s  setup_handler2.s
src/mailbox/: mod.rs  tags.rs
