[package]
name = "os_experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
aarch64-cpu = "9.3.1"
arrayvec = { version = "0.7.4", default-features = false }
ascii = { version = "1.1.0", default-features = false }
bitfield-struct = "0.5.3"
bitflags = "2.4.0"
custom-print = { version = "1.0.0", default-features = false }
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = { version = "0.4.20", default-features = false }
num_enum = { version = "0.7.0", default-features = false }
paste = "1.0.14"
spin = "0.9.8"
static_assertions = "1.1.0"
tock-registers = "0.8.1"
uart_16550 = "0.3.0"
volatile = "0.5.1"
bytesize = { git = "https://github.com/AdnoC/bytesize_nostd.git", branch = "no_std", default-features = false }
arr_macro = "0.2.1"
array-const-fn-init = "0.1.1"
elain = "0.3.0"
bit_field = "0.10.2"
